# User_Service

./: CMakeLists.txt  README.md  Tree.md  docker-compose.yml  project_all_code.txt
api/: README.md
api/proto/: CMakeLists.txt  user_service.proto
api/proto/pb_auth/: auth.proto
api/proto/pb_common/: result.proto
api/proto/pb_user/: user.proto
benchmark_results/: concurrency_10.json  concurrency_100.json  concurrency_200.json  concurrency_50.json  concurrency_500.json  report_20260214_110529.md
configs/: README.md  config.docker.yaml  config.yaml
deploy/docker/: Dockerfile  README.md  entrypoint.sh
include/auth/: README.md  authenticator.h  jwt_authenticator.h  jwt_service.h  sms_service.h  token_cleanup_task.h  token_repository.h
include/cache/: README.md  redis_client.h
include/client/: README.md  auth_client.h  client_options.h  user_client.h
include/common/: README.md  auth_type.h  error_codes.h  logger.h  password_helper.h  proto_converter.h  proto_utils.h  result.h  time_utils.h  utils.h  uuid.h  validator.h
include/config/: README.md  config.h
include/db/: README.md  mysql_connection.h  mysql_error.h  mysql_result.h  user_db.h
include/discovery/: README.md  service_discovery.h  service_instance.h  service_registry.h  zk_client.h
include/entity/: README.md  page.h  token.h  user_entity.h
include/exception/: README.md  client_exception.h  exception.h  mysql_exception.h
include/exception/converter/: kafka_error_converter.h  mysql_error_converter.h
include/handlers/: READMD.md  auth_handler.h  user_handler.h
include/kafka/: kafka_error.h  kafka_producer.h  kafka_types.h
include/pool/: README.md  connection_pool.h
include/server/: README.md  grpc_server.h  server_builder.h
include/service/: README.md  auth_service.h  user_service.h  user_service_impl.h
scripts/: benchmark.sh  init_db.sql
src/: CMakeLists.txt  main.cpp
src/auth/: CMakeLists.txt  jwt_service.cpp  sms_service.cpp  token_cleanup_task.cpp  token_repository.cpp
src/cache/: CMakeLists.txt  redis_client.cpp
src/client/: CMakeLists.txt  auth_client.cpp  user_client.cpp
src/common/: CMakeLists.txt  logger.cpp
src/config/: CMakeLists.txt  config.cpp
src/db/: CMakeLists.txt  mysql_connection.cpp  mysql_result.cpp  user_db.cpp
src/discovery/: CMakeLists.txt  service_discovery.cpp  service_registry.cpp  zk_client.cpp
src/handlers/: CMakeLists.txt  auth_handler.cpp  user_handler.cpp
src/kafka/: CMakeLists.txt  kafka_producer.cpp
src/kafka/detail/: detail.h  kafak_callbacks.h  kafka_conf_builder.h  kafka_serialization.h
src/server/: CMakeLists.txt  auth_main.cpp  grpc_server.cpp  main.cpp  server_builder.cpp  user_main.cpp
src/service/: CMakeLists.txt  user_service_impl.cpp
src/services/: CMakeLists.txt  auth_service.cpp  user_service.cpp
tests/: CMakeLists.txt  config_test.cpp  db_test.cpp  redis_test.cpp  test_client.cpp
tests/auth/: CMakeLists.txt  jwt_service_test.cpp  mock_auth_deps.h  sms_service_test.cpp  token_cleanup_task_test.cpp  token_repository_test.cpp
tests/cache/: CMakeLists.txt  mock_redis_client.h  redis_client_test.cpp
tests/client/: CMakeLists.txt  auth_client_test.cpp  mock_auth_service.h  user_client_test.cpp
tests/config/: CMakeLists.txt  config_test.cpp  invalid_config.yaml
tests/db/: CMakeLists.txt  db_test.cpp  db_test_fixture.h  mysql_connection_test.cpp  mysql_result_test.cpp  user_db_test.cpp
tests/discovery/: CMakeLists.txt  mock_zk_client.h  service_discovery_test.cpp  service_instance_test.cpp  service_registry_test.cpp  zk_client_test.cpp  zk_integration_test.cpp
tests/handlers/: CMakeLists.txt  auth_handler_test.cpp  mock_services.h  user_handler_test.cpp
tests/integration/: CMakeLists.txt  user_flow_integration_test.cpp
tests/logger/: CMakeLists.txt  logger_test.cpp
tests/server/: CMakeLists.txt  grpc_server_test.cpp  mock_dependencies.h  server_builder_test.cpp  test_config.yaml
tests/service/: CMakeLists.txt  auth_service_test.cpp  mock_services.h  service_test_fixture.h  user_service_test.cpp
